crates/sdk/tests/macros/error_explicit_abi.stderr
error: (calimero)> explicit ABIs are not supported
  --> tests/macros/error_explicit_abi.rs:10:9
   |
10 |     pub extern "C" fn method(&self) {}
   |         ^^^^^^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState`
 --> tests/macros/error_explicit_abi.rs:6:8
  |
6 | struct MyState;
  |        ^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
